# kokoro-tts-mcp

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  kokoro_service.py  mcp-tts.py  pyproject.toml  requirements.txt
